[gd_scene load_steps=3 format=3 uid="uid://c02la0pxd8t1m"]

[ext_resource type="Script" path="res://menus/day_end_screen.gd" id="1_qg16e"]
[ext_resource type="FontFile" uid="uid://dwqlkti7py28c" path="res://assets/fonts/Dune_Rise.ttf" id="2_6hryp"]

[node name="Day End Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qg16e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.352941, 0.541176, 1)

[node name="Spice_Collected" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.25
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_6hryp")
theme_override_font_sizes/font_size = 32
text = "5000 kilos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money_Label" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.4
theme_override_fonts/font = ExtResource("2_6hryp")
theme_override_font_sizes/font_size = 32
text = "$1,000,000.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Store" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.5
anchor_right = 0.45
anchor_bottom = 0.9
theme_override_fonts/font = ExtResource("2_6hryp")
theme_override_font_sizes/font_size = 32
text = "Store"

[node name="NextDay" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.5
anchor_right = 0.85
anchor_bottom = 0.9
theme_override_fonts/font = ExtResource("2_6hryp")
theme_override_font_sizes/font_size = 32
text = "Next Day"

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[connection signal="pressed" from="CanvasLayer/NextDay" to="." method="_on_next_day_pressed"]
